# disasters-product-algorithms

./: .clinerules.md  .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  RELEASE_NOTES_v1.0.0.md  __init__.py  capella_base.ipynb  dev-conda-deps.txt  disasters-hub-image-update-guide.md  environment.yml  hub-conda-deps.txt  pyproject.toml  requirements.txt  satellogic_base.ipynb  umbra_base.ipynb
.github/: DOCKER_REBUILD_SETUP.md  PULL_REQUEST_TEMPLATE.md  RULESETS.md
.github/workflows/: build-and-push-dev.yaml  build-and-push-testmerge.yaml  build-and-push.yaml  enforce-branch-protection.yml  lint.yml  release-open-pr.yaml  release-tag.yaml  release.yaml  sync-conda-deps.yml  trigger-docker-rebuild-dev.yml  trigger-docker-rebuild-testmerge.yml  trigger-docker-rebuild.yml
.ipynb_checkpoints/: pyproject-checkpoint.toml  satellogic_base-checkpoint.ipynb
capella/: __init__.py  capella_v2.py  cli.py  process_capella.py
disasters_product_algorithms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: ADDING_A_NEW_SENSOR.md  ADDING_FUNCTIONS_TUTORIAL.md  AUTOMATION.md  EC2_DEPLOYMENT.md  HUB_DEPLOYMENT.md  RESAMPLING_GUIDE.md  SHARED_UTILS_API.md
image/: Dockerfile  environment.yml
landsat/: __init__.py  cli.py  landsat89_functions.py  process_landsat89.py
notebooks/: capella_workflow.ipynb  cog_metadata_template.ipynb  cog_metadata_template_cli.ipynb  landsat_workflow.ipynb  local_file_processing_template.ipynb  process_from_csv_template.ipynb  renaming_file_template.ipynb  satellogic_workflow.ipynb  sentinel2_workflow-testUpdates.ipynb  sentinel2_workflow.ipynb  shared_utils_reference.ipynb  simple_disaster_template.ipynb  umbra_workflow.ipynb
notebooks/.ipynb_checkpoints/: landsat_workflow-checkpoint.ipynb  satellogic_workflow-checkpoint.ipynb
notebooks/cog_conversion/: README_NOTEBOOKS.md
notebooks/cog_conversion/templates/file-mapping/202510_Flood_AK/: 202510_Flood_AK.csv
notebooks/testing/: local_file_processing_template.ipynb  process_from_csv_template.ipynb  renaming_file_template.ipynb  sentinel2_workflow.ipynb  simple_disaster_template.ipynb
notebooks/testing-notebooks/: capella_workflow.ipynb  landsat_workflow.ipynb  local_file_processing_template.ipynb  process_from_csv_template.ipynb  renaming_file_template.ipynb  satellogic_workflow.ipynb  sentinel2_workflow.ipynb  simple_disaster_template.ipynb  test-GAIA.ipynb  umbra_workflow.ipynb
raster_tools/: cli.py  summarize.py
satellogic/: __init__.py  cli.py  init.py  process_satellogic.py  satellogic_v2-Copy1.py  satellogic_v2.py
satellogic/.ipynb_checkpoints/: satellogic_v2-checkpoint.py
sentinel/: cli.py  download_sentinel2.py  process_sentinel2.py  sentinel2_functions.py
sentinel2/: __init__.py  download_sentinel2.py  process_sentinel2.py  sentinel2_functions.py
sentinel2/.ipynb_checkpoints/: cli-checkpoint.py  process_sentinel2-checkpoint.py  sentinel2_functions-checkpoint.py
shared_utils/: __init__.py  batch_analyzer.py  chunk_configs.py  chunk_processor.py  cli.py  cog_creator.py  cog_metadata.py  cog_processing.py  cog_utils.py  cog_validation.py  compression.py  error_handling.py  file_naming.py  gdal_cog_processor.py  gdal_edit.py  geotiff_analyzer.py  log_utils.py  main_processor.py  memory_management.py  notebook_helpers.py  profiles.py  reprojection.py  s3_operations.py  s3utils.py  test_upload.py  verification.py  version.py
shared_utils/.ipynb_checkpoints/: cog_utils-checkpoint.py  geotools-checkpoint.py
tests/: conftest.py
tests/fixtures/: gaia_atlanta_sample.tif
tests/integration/: test_cog_pipeline.py  test_nodata_pipeline.py
tests/unit/: test_chunk_configs.py  test_cog_utils.py  test_cog_validation.py  test_compression.py  test_file_naming.py  test_gdal_processor.py  test_memory_mgmt.py  test_profiles.py  test_summarize_raster.py
tools/: check_sensor_consistency.py  new_sensor.py
tools/_templates/notebooks/: testing_workflow.py.tmpl  workflow.py.tmpl
tools/_templates/sensor/: __init__.py.tmpl  cli.py.tmpl  name_v2.py.tmpl  process_name.py.tmpl
umbra/: __init__.py  cli.py  process_umbra.py  umbra_v2.py
umbra/.ipynb_checkpoints/: process_umbra-checkpoint.py
