[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disasters-product-algorithms"
version = "0.2.0"
description = "Process Landsat 8/9 and Sentinel-2 satellite imagery to generate disaster response products, with COG conversion and AWS integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Kaylee Sharp"}
]
dependencies = [
    "Pillow",
    "lxml",
    "psutil",
    "fsspec",
    "s3fs",
]

# Note: The following packages should be pre-installed via conda in your environment:
# - gdal (must match system libgdal version)
# - rasterio
# - rio-cogeo
# - geopandas
# - pyproj
# - numpy
# - scipy
# - requests
# - boto3
# - botocore
# - tqdm

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "moto[s3]>=5.0",
]

[project.scripts]
process_landsat89 = "landsat.cli:process_landsat89_cli"
process_sentinel2 = "sentinel2.cli:process_sentinel2_cli"
download_sentinel2 = "sentinel2.cli:download_sentinel2_cli"
process_satellogic = "satellogic.cli:process_satellogic_cli"
process_umbra = "umbra.cli:process_umbra_cli"
summarize_raster = "raster_tools.cli:summarize_raster_cli"

[project.urls]
Homepage = "https://github.com/klesinger/disasters-product-algorithms"

[tool.setuptools.packages.find]
include = ["landsat*", "sentinel2*", "satellogic*", "umbra*", "shared_utils*", "raster_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gdal: tests requiring GDAL CLI tools",
    "rio_cogeo: tests requiring rio-cogeo CLI",
    "slow: slow integration tests",
]
