[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disasters-product-algorithms"
version = "0.2.0"
description = "Process Landsat 8/9 and Sentinel-2 satellite imagery to generate disaster response products, with COG conversion and AWS integration"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Kaylee Sharp"}
]
dependencies = [
    "Pillow",
    "lxml",
    "psutil",
    "fsspec",
    "s3fs",
]

# =============================================================================
# DEV-LOCAL conda-install spec (not the hub-image spec)
# =============================================================================
# This block lists the conda packages you need for LOCAL development on a
# laptop / VM. The Disasters Hub image gets its conda packages from a
# different place — see hub-conda-deps.txt and docs/HUB_DEPLOYMENT.md.
#
# For local dev:
#   conda install -c conda-forge gdal rasterio rio-cogeo geopandas pyproj \
#     numpy scipy pillow lxml requests boto3 botocore tqdm psutil fsspec s3fs
#   pip install -e .
#
# Why these aren't in pip dependencies: GDAL and friends require dylib
# version coupling that pip can't safely manage.
#
# For the hub image: deps flow through one of two paths —
#   1. Pip-installable deps → add to `[project] dependencies` below.
#      Auto-picked-up by the algorithms install RUN layer in
#      pangeo-notebook-veda-image/Dockerfile (pinned per variant via
#      ARG ALGORITHMS_REF: prod→main, dev→dev).
#   2. Conda-only deps → add to hub-conda-deps.txt at the repo root.
#      The sync-conda-deps workflow auto-opens a PR in the image repo.
# Full flow + per-variant pinning mechanics: docs/HUB_DEPLOYMENT.md.
# =============================================================================

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
    "moto[s3]>=5.0",
]

[project.scripts]
process_landsat89 = "landsat.cli:process_landsat89_cli"
process_sentinel2 = "sentinel2.cli:process_sentinel2_cli"
download_sentinel2 = "sentinel2.cli:download_sentinel2_cli"
process_satellogic = "satellogic.cli:process_satellogic_cli"
process_umbra = "umbra.cli:process_umbra_cli"
process_capella = "capella.cli:process_capella_cli"
summarize_raster = "raster_tools.cli:summarize_raster_cli"

[project.urls]
Homepage = "https://github.com/klesinger/disasters-product-algorithms"

[tool.setuptools.packages.find]
include = ["landsat*", "sentinel2*", "satellogic*", "umbra*", "capella*", "shared_utils*", "raster_tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gdal: tests requiring GDAL CLI tools",
    "rio_cogeo: tests requiring rio-cogeo CLI",
    "slow: slow integration tests",
]
